adding some images

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -10,3 +10,5 @@ We could potentially have a whole site dedicated for the lesson design and lesso
 it is up to how we are wanting to showcase information
 
 
+![hi](../assets/businesspepe.png)
+![hi](../assets/1654724172621.jpg)
