readme update starting filling in resolvers for the item entity

--- a/apps/docs/pages/routes/createItem.mdx
+++ b/apps/docs/pages/routes/createItem.mdx
@@ -1,1 +1,12 @@
 To create an Item you need to have an external source for example like TCG Player
+
+
+Front End - querys TCG player getting a list of x and their prices
+
+
+
+api/tcg/createitem -> 
+
+creates an item in the database with the name and price
+
+creates a raffle right after the items is added
