--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,13 +1,13 @@
-# Invent
+#Turbo-Raffle
  
-Welcome to Invent!
+Welcome to the Turbo-Raffle project!
 
-## What is Invent?
+## What is Turbo-Raffle?
 
-A **simple**, **powerful** and **flexible** lesson generation and lesson player platform.
+Turbo Raffle is at its core a drop shipping raffle application.
+Turbo raffle seeks to encorporate with existing market place API's to allow users to create and participate in raffles for products.
 
-We could potentially have a whole site dedicated for the lesson design and lesson player
-it is up to how we are wanting to showcase information
+As a starting market we have selected https://www.tcgplayer.com/ and will be interfacing with Magic, Yu-Gi-Oh!, Pokemon, Digimon, Flesh and Blood, 
 
 
 ![hi](../assets/businesspepe.png)
