--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -7,5 +7,6 @@ As a starting market we have selected https://www.tcgplayer.com/ and will be int
 
 - Users will purchase our site currency which will allow them to then purchase tickets in a raffle, or create a new raffle.
 - Each ticket purchased will award the user with a product from the specific product category of the raffle if/when the raffle is completed. (Magic, Yu-Gi-Oh!, etc...). 
+- Completed raffles will award users with tickets for a global lottery to win site currency.
 - Products won will then be redeemable for the real world item or cashed back in for their real world value in our site currency.
 - Users will be able to earn achievements for spending our currency participating in and winning raffles.
