--- a/apps/docs/pages/site layout/base-layout.mdx
+++ b/apps/docs/pages/site layout/base-layout.mdx
@@ -5,3 +5,5 @@ The basic layout for the site will consist of 5 major areas
 - Social Media Panel
 - Page Content Area
 
+
+![hi](../../assets/base-layout.png)
