--- a/apps/docs/pages/database/raffle.mdx
+++ b/apps/docs/pages/database/raffle.mdx
@@ -1,9 +1,9 @@
-## Item
+## Raffle
 <div style={{padding:"10px"}}>
 <table style={{border: "1px solid white"}}>
     <tr>
         <th colspan="2" style={{colspan: "2",border: "2px solid white"}}>
-            Item
+            Raffle
         </th>
     </tr>    
     <tr>
@@ -11,7 +11,7 @@
             PK
         </td>
         <td width="350" style={{border: "2px solid white"}}>
-            item_id
+            raffle_id
         </td>
     </tr>
     <tr style={{border: "1px solid white"}}>
@@ -19,58 +19,50 @@
             FK
         </td>
         <td style={{border: "1px solid white"}}>
-            raffle_id: int NOT NULL
+            item_id: int NOT NULL
         </td>
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            FK
+            
         </td>
         <td style={{border: "1px solid white"}}>
-            category_id: int NOT NULL
-        </td>
-    </tr>
-        <tr style={{border: "1px solid white"}}>
-        <td style={{border: "1px solid white"}}>
-            FK
-        </td>
-        <td style={{border: "1px solid white"}}>
-            rarity_id: int NOT NULL
+            closed: boolean NOT NULL
         </td>
     </tr>
         <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            FK
+            
         </td>
         <td style={{border: "1px solid white"}}>
-           group_id: int NOT NULL
+            winner_id: int NOT NULL
         </td>
     </tr>
         <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            FK
+            
         </td>
         <td style={{border: "1px solid white"}}>
-            condition_id: int NOT NULL
+           num_tickets: int NOT NULL
+        </td>
+    </tr>
+        <tr style={{border: "1px solid white"}}>
+        <td style={{border: "1px solid white"}}>
+            
+        </td>
+        <td style={{border: "1px solid white"}}>
+            ticket_cost: int NOT NULL
         </td>
     </tr>
             <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            FK
+            
         </td>
         <td style={{border: "1px solid white"}}>
-            color_id: int NOT NULL
+            time_remaining: int NOT NULL
         </td>
     </tr>
-                <tr style={{border: "1px solid white"}}>
-        <td style={{border: "1px solid white"}}>
-            FK
-        </td>
-        <td style={{border: "1px solid white"}}>
-            holo_id: int NOT NULL
-        </td>
-    </tr>
-                    <tr style={{border: "1px solid white"}}>
+    <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
             
         </td>
@@ -87,7 +79,7 @@
 <table style={{border: "1px solid white"}}>
     <tr>
         <th colspan="9" style={{colspan: "2",border: "2px solid white"}}>
-            Item
+            Raffle
         </th>
     </tr>    
     <tr>
@@ -121,10 +113,10 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
+            0
         </td>
         <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
+            0
         </td>
                 <td style={{border: "1px solid white"}}>
             1
@@ -150,10 +142,10 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
+            1
         </td>
         <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
+            1
         </td>
                 <td style={{border: "1px solid white"}}>
             1
