--- a/apps/docs/pages/database/user.mdx
+++ b/apps/docs/pages/database/user.mdx
@@ -11,7 +11,7 @@
             PK
         </td>
         <td width="350" style={{border: "2px solid white"}}>
-            user_id
+            user_id nanoid NOT NULL
         </td>
     </tr>
     <tr style={{border: "1px solid white"}}>
@@ -86,7 +86,7 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            0
+            V1StGXR8_Z5jdHi6B-myT
         </td>
         <td style={{border: "1px solid white"}}>
             Xzanos
@@ -106,7 +106,7 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            1
+            V1StGXR8_Z5jdHi6B-myT
         </td>
         <td style={{border: "1px solid white"}}>
             PaleHazy
