--- a/apps/docs/pages/database/item.mdx
+++ b/apps/docs/pages/database/item.mdx
@@ -19,14 +19,6 @@
             FK
         </td>
         <td style={{border: "1px solid white"}}>
-            raffle_id: int NOT NULL
-        </td>
-    </tr>
-    <tr style={{border: "1px solid white"}}>
-        <td style={{border: "1px solid white"}}>
-            FK
-        </td>
-        <td style={{border: "1px solid white"}}>
             category_id: int NOT NULL
         </td>
     </tr>
@@ -94,9 +86,6 @@
         <td width="80" style={{border: "2px solid white"}}>
             PK
         </td>
-        <td width="350" style={{border: "2px solid white"}}>
-            raffle_id
-        </td>
                 <td width="350" style={{border: "2px solid white"}}>
             category_id
         </td>
@@ -121,10 +110,7 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
-        </td>
-        <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
+            gON01ciU4pKXUJCOoeyQH
         </td>
                 <td style={{border: "1px solid white"}}>
             1
@@ -150,10 +136,7 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
-        </td>
-        <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
+            e_khoZkOIsi63VXdgd9kP
         </td>
                 <td style={{border: "1px solid white"}}>
             1
