--- a/apps/docs/pages/database/raffle.mdx
+++ b/apps/docs/pages/database/raffle.mdx
@@ -11,7 +11,7 @@
             PK
         </td>
         <td width="350" style={{border: "2px solid white"}}>
-            raffle_id
+            raffle_id nanoid NOT NULL
         </td>
     </tr>
     <tr style={{border: "1px solid white"}}>
@@ -32,7 +32,7 @@
     </tr>
         <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            
+            FK
         </td>
         <td style={{border: "1px solid white"}}>
             winner_id: int NOT NULL
@@ -86,26 +86,23 @@
         <td width="80" style={{border: "2px solid white"}}>
             PK
         </td>
+                        <td width="350" style={{border: "2px solid white"}}>
+            item_id
+        </td>
+                                <td width="350" style={{border: "2px solid white"}}>
+            closed
+        </td>
         <td width="350" style={{border: "2px solid white"}}>
-            raffle_id
+            winner_id
         </td>
                 <td width="350" style={{border: "2px solid white"}}>
-            category_id
+            num_tickets
         </td>
                 <td width="350" style={{border: "2px solid white"}}>
-            rarity_id
+            ticket_cost
                     </td>
                             <td width="350" style={{border: "2px solid white"}}>
-            group_id
-        </td>
-                <td width="350" style={{border: "2px solid white"}}>
-            condition_id
-        </td>
-                <td width="350" style={{border: "2px solid white"}}>
-            color_id
-        </td>
-                <td width="350" style={{border: "2px solid white"}}>
-            holo_id
+            time_remaining
         </td>
                 <td width="350" style={{border: "2px solid white"}}>
             tcgp_id
@@ -113,28 +110,25 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            0
+            plqaRpP8V9lIJ_hch9GWU
+        </td>
+                <td style={{border: "1px solid white"}}>
+            e_khoZkOIsi63VXdgd9kP
         </td>
         <td style={{border: "1px solid white"}}>
-            0
+            true
         </td>
                 <td style={{border: "1px solid white"}}>
-            1
-        </td>
-        <td style={{border: "1px solid white"}}>
-            1
+            hWG4o6Tq9FJRxwDg7LJwx
         </td>
                 <td style={{border: "1px solid white"}}>
-            1
-        </td>
-                <td style={{border: "1px solid white"}}>
-            1
+            10
         </td>
                         <td style={{border: "1px solid white"}}>
             1
         </td>
                         <td style={{border: "1px solid white"}}>
-            1
+            0
         </td>
                         <td style={{border: "1px solid white"}}>
             1
@@ -142,31 +136,28 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            1
+           j88Mm2z0yAXBmEN7sSBy_
         </td>
         <td style={{border: "1px solid white"}}>
-            1
+            gON01ciU4pKXUJCOoeyQH
         </td>
                 <td style={{border: "1px solid white"}}>
-            1
+            true
         </td>
         <td style={{border: "1px solid white"}}>
-            1
+            V1StGXR8_Z5jdHi6B-myT
+        </td>
+                <td style={{border: "1px solid white"}}>
+            10
         </td>
                 <td style={{border: "1px solid white"}}>
             1
         </td>
-                <td style={{border: "1px solid white"}}>
-            1
+                        <td style={{border: "1px solid white"}}>
+            0
         </td>
                         <td style={{border: "1px solid white"}}>
-            1
-        </td>
-                        <td style={{border: "1px solid white"}}>
-            1
-        </td>
-                        <td style={{border: "1px solid white"}}>
-            1
+            2
         </td>
         
     </tr>
