--- a/apps/docs/pages/database/user.mdx
+++ b/apps/docs/pages/database/user.mdx
@@ -106,7 +106,7 @@
     </tr>
     <tr style={{border: "1px solid white"}}>
         <td style={{border: "1px solid white"}}>
-            V1StGXR8_Z5jdHi6B-myT
+            hWG4o6Tq9FJRxwDg7LJwx
         </td>
         <td style={{border: "1px solid white"}}>
             PaleHazy
