--- a/apps/docs/pages/site_layout/filters.mdx
+++ b/apps/docs/pages/site_layout/filters.mdx
@@ -2,9 +2,12 @@
 
 Contains inputs for filtering the raffle list page as well as well as other pages such as the redeem page, and participating raffles page.
 
+Search: Product Name
+
+- Category 
+
 Item Filters
 - Sealed / Unsealed Product, 
-- Category, 
 - Condition, 
 - Rarity, 
 - Holographic, 
@@ -15,6 +18,4 @@ Raffle Filters
 - Ticket Quantity 
 - Time Remaining
 
-Search: Product Name
-
-![hi](../../assets/base-layout.png)
+![hi](../../assets/filters.png)
