--- a/apps/docs/pages/site_layout/header.mdx
+++ b/apps/docs/pages/site_layout/header.mdx
@@ -1,11 +1,12 @@
 ## Header
 
-The basic layout for the site will consist of 5 major areas
-- <span style={{color:"#DAE8FC"}}>Header</span>
-- <span style={{color:"#FFE6CC"}}>Filters Panel</span>
-- <span style={{color:"#E1D5E7"}}>Navigation Panel</span>
-- <span style={{color:"#F8CECC"}}>Social Media Panel</span>
-- <span style={{color:"#D5E8D4"}}>Page Content Area</span>
+Contains the application name, currency lottery feed, winner feed, and user currency 
+
+- Title
+- currency lottery feed
+- winner feed
+- user currency
 
 
-![hi](../../assets/base-layout.png)
+
+![hi](../../assets/title.png)
