--- a/apps/docs/pages/database/Tables/color.mdx
+++ b/apps/docs/pages/database/Tables/color.mdx
@@ -1,9 +1,9 @@
-## Category
+## Color
 <div style={{padding:"10px"}}>
 <table style={{border: "1px solid white"}}>
     <tr>
         <th colspan="2" style={{colspan: "2",border: "2px solid white"}}>
-            Category
+            Color
         </th>
     </tr>    
     <tr>
@@ -11,7 +11,7 @@
             PK
         </td>
         <td width="350" style={{border: "2px solid white"}}>
-            category_id
+            color_id
         </td>
     </tr>
     <tr style={{border: "1px solid white"}}>
@@ -61,7 +61,7 @@
 <table style={{border: "1px solid white"}}>
     <tr>
         <th colspan="2" style={{colspan: "2",border: "2px solid white"}}>
-            Category
+            Color
         </th>
     </tr>    
     <tr>
