--- a/apps/docs/pages/database/table-relations.mdx
+++ b/apps/docs/pages/database/table-relations.mdx
@@ -4,3 +4,7 @@
 
 
 ![hi](../../assets/RaffleDb.png)
+
+The below image shows an example of a few of the "filter tables", this is also depicting the filters as a part of the item table vs having an "item filters" table.
+
+![hi](../../assets/MoreDBExamples.png)
